--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="material-symbols-outlined">
                 location_on
             </span>
-            <h4 class="country-txt">Jakarta</h4>
+            <h4 class="country-txt">Rathnapura</h4>
         </div>
         <h5 class="current-date-txt regular-txt">Wed,07 Aug</h5>
     </div>
@@ -47,7 +47,7 @@
                 water_drop
             </span>
             <div class="condition-info">
-                <hh5 class="regular-txt">Humidity</hh5>
+                <h5 class="regular-txt">Humidity</h5>
                 <h5 class="humidity-value-txt">55%</h5>
             </div>
         </div>
